# clip

./: Cargo.toml  Makefile  README.md  build.rs
src/: lib.rs  main.rs  version.rs
src/clipboard/: mod.rs  windows_clipborad.rs  x11_clipboard.rs
