[package]
name = "clip"
version = "0.1.0"
edition = "2021"
keywords = ["cli", "clipboard", "tools"]
readme = "./README.md"
license = "MIT"
description = "A cross-platform clipboard tool"
homepage = "https://github.com/crochee/clip"
repository = "https://github.com/crochee/clip"

[[bin]]
name = "clip"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.3"

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten"))))'.dependencies]
x11-clipboard = "0.9"
